# Gluon

./: Gluon.cabal  README.md  run.ps1  stack.yaml
.stack-work/install/09641122/flag-cache/: Gluon-0.1.0.0-cd8935403670e09c17004dc6aaed3e80  aeson-0.11.2.1-ed50216c5e25bbf2912beee08481f900  aeson-pretty-0.7.2-e1a4263d9b2ec0e365ba98e8e1555901  base16-bytestring-0.1.1.6-63616b6db99e52c8feb9ecd312966292  bson-0.3.2.1-673a47219a86895951f9c8328b60e8e0  bytestring-builder-0.10.8.1.0-8aa4073730c676dbe210ea8bffd8d092  cipher-aes-0.2.11-2c7d60d14d78e7a01de75593faef7b2e  conduit-1.2.6.4-fdb567b2229d21278e1ed153573bf59b  conduit-extra-1.1.13.1-9248d296172c4433e55c73e2392b125c  cprng-aes-0.6.1-36649889c8fc4d43b5a9d18142a5af48  crypto-cipher-types-0.0.9-9a9ec1ed5c363304df610c70483311b9  crypto-random-0.0.9-49c572101e241a71ac5952ff1b987b4e  cryptohash-0.11.9-9cc99e885861461f5efe5edbc5b99aa7  data-binary-ieee754-0.4.4-96a3959956a417e2fc28b4f5b00fa0c8  either-4.4.1-782fe74f5379958b7aeb4fd849fb1e1a  either-unwrap-1.1-bafc516a70cd0a99d81ec44271fda698  fast-logger-2.4.7-cb99b475dc6b9b6ecd1b8d86b389cc4c  hashtables-1.2.1.0-beb6dad72fd3e7e62cafa03a81296b94  http-api-data-0.3.3-7e154990cb0c9975219f6e62dcde4cd2  http2-1.6.0-57ebbfbf63f7af4e18e5f43a266585c5  mmorph-1.0.9-aa58dd8415db7de37d8cb692cb8a5e79  mongoDB-2.0.10-e873b7feac00213bc90f48cbe3064eb8  nonce-1.0.2-f05d54a972787e5d51c9aec4f2b8c08f  random-shuffle-0.0.4-2ff33dd374a89d958fa4a01bda5a4aa4  (+16 more)
.stack-work/intero/: intero2401koV.hs  intero3163SqV.hs  intero3246Jld.hs  intero5213C1V.hs  intero6065_D0.hs  intero6588oF0.hs  intero69214G0.hs  intero7206oH0.hs  intero7501oI0.hs  intero9132Ug0.hs
.stack-work/intero/intero10192K0D/: CommonServer.hi  CommonServerApi.hi
.stack-work/intero/intero10945DHE/: CommonServer.hi  CommonServerApi.hi  CommonServerApiClient.hi  FileServer.hi
.stack-work/intero/intero2401xyb/: CommonServer.hi  CommonServerApi.hi
.stack-work/intero/intero3163f0b/: CommonServer.hi
.stack-work/intero/intero3246Wvj/: CommonServer.hi
.stack-work/intero/intero5213P_b/: CommonServer.hi  CommonServerApi.hi
.stack-work/intero/intero5424XBc/: CommonServer.hi
.stack-work/intero/intero6588aPD/: CommonServer.hi  CommonServerApi.hi
.stack-work/intero/intero6921qQD/: CommonServer.hi  CommonServerApi.hi
.stack-work/intero/intero7024yIm/: CommonServer.hi  CommonServerApi.hi
.stack-work/intero/intero7206aRD/: CommonServer.hi  CommonServerApi.hi
.stack-work/intero/intero7501aSD/: CommonServer.hi  CommonServerApi.hi  CommonServerApiClient.hi
.stack-work/intero/intero7822oTD/: CommonServer.hi  CommonServerApi.hi  CommonServerApiClient.hi  FileServer.hi
.stack-work/intero/intero7871yTm/: CommonServer.hi  CommonServerApi.hi
.stack-work/intero/intero8374FeD/: CommonServer.hi
.stack-work/intero/intero9132GqD/: CommonServer.hi  CommonServerApi.hi
Gluon/: Gluon.cabal
app/: Main.hs
res/: runMongoDb.ps1
res/FileServers/: Test02.txt
res/MongoDBData/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--7301439354873346901.wt  collection-0-2996713884241168789.wt  index-1--7301439354873346901.wt  index-1-2996713884241168789.wt  sizeStorer.wt
res/MongoDBData/diagnostic.data/: metrics.2017-02-03T00-24-34Z-00000  metrics.2017-02-03T00-26-56Z-00000  metrics.2017-02-03T00-31-20Z-00000  metrics.2017-02-03T00-35-57Z-00000
res/MongoDBData/journal/: WiredTigerLog.0000000004
src/: #IdentityServer.hs#  .#IdentityServer.hs  CommonServer.hs  CommonServerApi.hs  CommonServerApiClient.hs  DirectoryServer.hs  FileServer.hs  IdentityServer.hs  MongoDbConnector.hs  ProxyServer.hs  SecurityServer.hs  TransactionServer.hs
test/: IdentityServerTest.py
(+1164 files in other folders)
