name:                Gluon
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Gluon#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DirectoryServer, FileServer, IdentityServer, CommonServer
  build-depends:       
      base
    , aeson
    , servant == 0.9.*
    , servant-server
    , servant-client
    , transformers
    , aeson
    , wai
    , network-info
    , warp
    , directory
    , http-client
    , either
    , either-unwrap
    , time
    , random
    , containers
    , bytestring
  default-language:    Haskell2010

executable Gluon-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
      base
    , servant == 0.9.*
    , servant-server
    , transformers
    , aeson
    , wai
    , warp
    , directory
    , Gluon
    , bytestring
  default-language:    Haskell2010

test-suite Gluon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
    base
    , servant == 0.9.*
    , servant-server
    , transformers
    , aeson
    , wai
    , warp
    , hspec
    , Gluon
    , servant-client
    , warp >= 3.2.4
    , http-client
    , http-types
    , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Gluon
